nginx/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: nginx
  labels:
    name: nginx
