nginx/daemonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-daemonset
  namespace: nginx
  labels:
    app: nginx
spec:
  selector: 
    matchLabels:
      app: nginx    
  template:
    metadata: 
      name: nginx-daemonset-pod
      labels:
        app: nginx
    spec:
      containers: 
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
